# glade0-0.6.4

./: .gitattributes  .gitignore  ChangeLog  FAQ  Makefile  Makefile.am  Makefile.in  NEWS  README  acconfig.h  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.in  configure.orig.in  configure.scan  glade.desktop  glade.spec  glade.spec.in
doc/: Makefile  Makefile.in
doc/C/: Makefile  Makefile.am  Makefile.in  faq.sgml  turbo-start.sgml  user-guide.sgml
doc/C/faq/: index.html  ln7.html
doc/C/turbo-start/: index.html  ln7.html
doc/C/user-guide/: authors.html  edit-menu.html  helloworld.html  help-menu.html  index.html  introduction.html  libglade.html  ln7.html  menus.html  output.html  project-options.html  quickstart.html  settings-menu.html  toolbar.html  using.html  view-menu.html  windows-clipboard.html  windows-editor.html  windows-palette.html  windows-tree.html  windows.html  x225.html  x324.html
doc/it/: ChangeLog  Makefile  Makefile.am  Makefile.in  faq-it.omf  faq.sgml  turbo-start-it.omf  turbo-start.sgml  user-guide-it.omf  user-guide.sgml
doc/it/faq/: index.html  ln10.html
doc/it/turbo-start/: index.html  ln10.html
doc/it/user-guide/: authors.html  edit-menu.html  helloworld.html  help-menu.html  index.html  introduction.html  libglade.html  ln7.html  menus.html  output.html  project-options.html  quickstart.html  settings-menu.html  toolbar.html  using.html  view-menu.html  windows-clipboard.html  windows-editor.html  windows-palette.html  windows-tree.html  windows.html  x225.html  x324.html
examples/editor/: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.in  configure.scan
examples/editor/m4/: ChangeLog  gettext.m4  iconv.m4  lib-link.m4  po.m4  progtest.m4
examples/editor/po/: ChangeLog  Makefile  Makefile.in  glade-editor.pot
examples/editor/src/: Makefile  Makefile.am  Makefile.in  glade-editor
examples/editor/src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
glade/: Makefile  Makefile.am  Makefile.in  editor.c  gb.h  glade.c  glade.h  glade_gnomedblib.c  glade_gtk12lib.c  glade_menu_editor.c  glade_project_options.c  glade_project_window.c  main.c  palette.c  property.c  source.c  tree.c  utils.c
glade/data/: Makefile  Makefile.in
glade/data/gtk/: Makefile  Makefile.in
glade/gbwidgets/: Makefile  Makefile.am  Makefile.in  gbarrow.c  gbbutton.c  gbcurve.c  gbgammacurve.c  gbtext.c  gbtoolbar.c
glade/gnome/: Makefile  Makefile.am  Makefile.in  gnomepixmap.c
glade/gnome-db/: Makefile  Makefile.am  Makefile.in  gnomedbdesigner.c  gnomedbentry.c  gnomedberror.c  gnomedberrordlg.c  gnomedbexport.c  gnomedblabel.c  gnomedblogin.c  gnomedblogindlg.c  gnomedblogviewer.c  gnomedbtableeditor.c  gnomedbwindow.c
glade/graphics/: gnome-db-dsnconfig.xpm  gnome-db-table-editor.xpm
macros/: ChangeLog  Makefile  Makefile.in  ax_lib_xml_security.m4  ax_xercesc.m4  curses.m4  glib-gettext.m4  gnome-bonobo-check.m4  gnome-fileutils.m4  gnome-gettext.m4  gnome-guile-checks.m4  gnome-objc-checks.m4  gnome-support.m4  gperf-check.m4  gtk.m4  intl.m4  intldir.m4  intltool.m4  inttypes-pri.m4  lib-link.m4  libxml.m4  linger.m4  need-declaration.m4  nls.m4  po.m4  progtest.m4  threadlib.m4  uintmax_t.m4
omf-install/: Makefile  Makefile.in  faq-C.omf  faq-it.omf  turbo-start-C.omf  turbo-start-it.omf  user-guide-C.omf  user-guide-it.omf
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  az.gmo  az.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  glade.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lv.gmo  lv.po  nl.gmo  nl.po  (+24 more)
