## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libgnomedbwidgets.a

INCLUDES = -I$(top_srcdir)/intl -I$(top_builddir)/intl

libgnomedbwidgets_a_SOURCES = \
	gnomedbbrowser.c \
	gnomedbcombo.c \
	gnomedbdesigner.c \
	gnomedbentry.c \
	gnomedberror.c \
	gnomedberrordlg.c \
	gnomedbexport.c \
	gnomedbgrid.c \
	gnomedblabel.c \
	gnomedblist.c \
	gnomedblogin.c \
	gnomedblogindlg.c \
	gnomedblogviewer.c \
	gnomedbiconlist.c \
	gnomedbdsnconfig.c \
	gnomedbdataset.c \
	gnomedbreport.c \
	gnomedbtableeditor.c \
	gnomedbwindow.c
